--- a/package.json
+++ b/package.json
@@ -70,9 +70,7 @@
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
+    "sinon": "^15.2.0",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "sinon": "^15.0.3"
   }
 }
