--- a/package.json
+++ b/package.json
@@ -3,14 +3,30 @@
   "displayName": "Copy with Replace",
   "description": "Auto-replace specific strings in your source code before copying to the clipboard",
   "version": "0.0.1",
+  "repository": "https://github.com/radiovisual/vscode-copy-with-replace",
+  "bugs": {
+    "url": "https://github.com/radiovisual/vscode-copy-with-replace"
+  },
+  "icon": "images/icon.png",
+  "galleryBanner": {
+    "color": "#ff3773",
+    "theme": "dark"
+  },
   "engines": {
     "vscode": "^1.77.0"
   },
+  "license": "SEE LICENSE IN LICENSE file",
+  "author": {
+    "name": "Michael Wuergler",
+    "email": "wuergler@gmail.com",
+    "url": "https://github.com/radiovisual"
+  },
   "categories": [
+    "Formatters",
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:extension.copyWithReplace"
+  "extensionKind": [
+    "ui"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -43,8 +59,8 @@
     },
     "commands": [
       {
-        "command": "copy-with-replace.helloWorld",
-        "title": "Hello World"
+        "command": "extension.copyWithReplace",
+        "title": "Copy with Replace"
       }
     ],
     "keybindings": [
@@ -59,7 +75,9 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "yarn run lint",
-    "test": "node ./test/runTest.js"
+    "test": "node ./test/runTest.js",
+    "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
@@ -72,5 +90,14 @@
     "mocha": "^10.2.0",
     "sinon": "^15.2.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "keywords": [
+    "vscode",
+    "extension",
+    "clipboard",
+    "copy",
+    "paste",
+    "replace"
+  ],
+  "homepage": "https://github.com/radiovisual/vscode-copy-with-replace/blob/main/README.md"
 }
