fix: publisher name in manifest

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bugs": {
     "url": "https://github.com/radiovisual/vscode-copy-with-replace"
   },
-  "publisher": "Michael Wuergler",
+  "publisher": "radiovisual",
   "icon": "images/icon.png",
   "galleryBanner": {
     "color": "#ff3773",
