--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
         node-version:
           - 18
           - 20
@@ -27,5 +28,12 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
-      - name: Test
-        run: yarn run test
+      - name: Run Lint
+        run: yarn run lint
+
+      - name: Run headless test
+        # In headless Linux CI machines xvfb is required to run VS Code
+      - run: xvfb-run -a npm test
+        if: runner.os == 'Linux'
+      - run: npm run test
+        if: runner.os != 'Linux'
