ci: fix yaml formatting

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,8 +32,7 @@ jobs:
         run: yarn run lint
 
       - name: Run headless test
-        # In headless Linux CI machines xvfb is required to run VS Code
-      - run: xvfb-run -a npm test
+        run: xvfb-run -a npm test
         if: runner.os == 'Linux'
       - run: npm run test
         if: runner.os != 'Linux'
