--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "preview": true,
   "packageManager": "yarn@1.22.19",
   "engines": {
-    "vscode": "^1.77.0",
-    "node": "^14.18.0 || >=16.0.0"
+    "node": "^14.18.0 || >=16.0.0",
+    "vscode": "^1.77.0"
   },
   "main": "./extension.js",
   "keywords": [
@@ -35,6 +35,7 @@
     "replace"
   ],
   "scripts": {
+    "deploy": "vsce publish --yarn",
     "format": "prettier --write . && yarn lint --fix",
     "lint": "eslint . --cache -f friendly --max-warnings 10",
     "package": "vsce package",
@@ -43,10 +44,10 @@
     "pretest": "yarn run lint",
     "publish": "yarn run test && yarn run package && vsce publish",
     "release": "changeset publish",
-    "test": "node ./test/runTest.js",
-    "deploy": "vsce publish --yarn"
+    "test": "node ./test/runTest.js"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/cz-commitlint": "^17.7.1",
     "@types/glob": "^8.1.0",
@@ -125,6 +126,9 @@
   },
   "extensionKind": [
     "ui"
-  ]
+  ],
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "commit-msg": "npx commitlint -e"
+  }
 }
-
