--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.{js,md,ts}": ["eslint --cache -f friendly --fix"],
-  "*.{json,yml}": ["prettier --write"]
+  "*.{js,ts}": ["eslint --cache -f friendly --fix"],
+  "*.{json,yml,md}": ["prettier --write"]
 }
