--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v3
@@ -24,17 +23,26 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
+      - name: Run Lint
+        run: yarn run lint
+
+      - name: Run headless test
+        run: xvfb-run -a npm test
+        if: runner.os == 'Linux'
+      - run: npm run test
+        if: runner.os != 'Linux'
+
       - name: Create Release Pull Request
         id: changesets
         uses: changesets/action@v1
+        with:
+          # This expects you to have a script called release which does a build for your packages and calls changeset publish
+          publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish
-        run: yarn publish
-
-      - name: Publish
-        if: success() && startsWith(github.ref, 'refs/tags/')
+        if: success() && steps.changesets.outputs.published == 'true' || startsWith(github.ref, 'refs/tags/')
         run: npm run deploy
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
