--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/cz-commitlint": "^17.7.1",
